FreeST/test/Programs/InvalidTests/Linearity/forkLinExp/forkLinExp.fst
main : Int
main = fork @(!Int) (\_:() 1-> new @!Int ())
